--- a/Phasmophobia Save Editor/Resources/Styles/Fluent/Button.xaml
+++ b/Phasmophobia Save Editor/Resources/Styles/Fluent/Button.xaml
@@ -28,6 +28,7 @@
                     SnapsToDevicePixels="true" />
             <fluent:FluentControl BorderThickness="{TemplateBinding BorderThickness}"
                                   CornerRadius="{TemplateBinding fluent:FluentAssist.CornerRadius}"
+                                  IsEnabled="{TemplateBinding fluent:FluentAssist.IsEnabled}"
                                   IsSmartClipped="True"
                                   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                 <Grid>
