--- a/Phasmophobia Save Editor/Resources/Styles/Fluent/Window.xaml
+++ b/Phasmophobia Save Editor/Resources/Styles/Fluent/Window.xaml
@@ -501,9 +501,11 @@
 
                             <!--  Header  -->
                             <Border Grid.Row="0"
-                                    Background="{DynamicResource PrimaryBrush}"
-                                    BorderBrush="{DynamicResource AccentBrush}"
-                                    BorderThickness="0,0,0,2">
+                                    Background="{themes:FluentResource AlternativeBrush}"
+                                    ClipToBounds="True"
+                                    CornerRadius="{TemplateBinding fluent:FluentAssist.CornerRadius,
+                                                                   Converter={converters:CornerRadiusToOrientedCornerRadiusConverter},
+                                                                   ConverterParameter=tleft tright}">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
@@ -525,7 +527,7 @@
                                                       VerticalAlignment="Center"
                                                       Content="{Binding RelativeSource={RelativeSource TemplatedParent},
                                                                         Path=Parameters.Header}"
-                                                      TextElement.Foreground="{DynamicResource MarkerBrush}" />
+                                                      TextElement.Foreground="{themes:FluentResource MarkerBrush}" />
 
                                     <!--  System Buttons  -->
                                     <Button x:Name="CloseButton"
@@ -586,7 +588,13 @@
                                                                     Path=Parameters.Content}" />
                             </Grid>
                             <Separator Grid.Row="2" Margin="10,0" />
-                            <Border Grid.Row="3" Margin="5">
+                            <Border Grid.Row="3"
+                                    Padding="5"
+                                    Background="{themes:FluentResource AlternativeBrush}"
+                                    ClipToBounds="True"
+                                    CornerRadius="{TemplateBinding fluent:FluentAssist.CornerRadius,
+                                                                   Converter={converters:CornerRadiusToOrientedCornerRadiusConverter},
+                                                                   ConverterParameter=bleft bright}">
                                 <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                                     <Button Width="80"
                                             Command="dialog:MessageDialogCommands.YesResultCommand"
